[package]
license = "MIT"
name = "app_engine"
version = "0.1.0"
edition = "2024"
authors = ["Christopher Nguyen (Clinery1)"]
repository = "https://github.com/Clinery1/app_engine"

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
bitflags = "2.9.0"
bytemuck = { version = "1.22.0", features = ["derive", "must_cast"] }
directories = "6.0.0"
fnv = "1.0.7"
image = "0.25.6"
indexmap = { version = "2.9.0", features = ["serde"] }
log = "0.4.27"
rfd = "0.15.3"
screen-13 = "0.12.5"
serde = { version = "1.0.219", features = ["derive"] }
shaderc = "0.9.1"
simplelog = "0.12.2"
thiserror = "2.0.12"
ultraviolet = { version = "0.9.2", features = ["bytemuck", "f64", "serde"] }
uuid = { version = "1.16.0", features = ["v4"] }
winit = "0.30.9"
